--- a/index.html
+++ b/index.html
@@ -1,22 +1,76 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+        crossorigin="anonymous">
     <link rel="stylesheet" href="css/main.css">
+
+    <!-- Fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+
     <title>Sparkle</title>
-  </head>
-  <body>
-    <h1>Hello</h1>
+</head>
+
+<body>
+
+    <header>
+
+        <nav class="navbar navbar-dark bg-dark" style="background: #1a1a1a !important;">
+            <a class="navbar-brand" href="#">
+                <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="47px" height="47px">
+                    <path fill-rule="evenodd" fill="rgb(255, 255, 255)" d="M27.676,20.157 C26.946,20.157 26.582,20.833 26.582,22.184 L26.582,25.928 C26.595,26.144 26.624,26.342 26.624,26.572 C26.624,26.881 26.598,27.154 26.582,27.444 L26.582,30.745 C26.582,31.403 26.658,31.914 26.809,32.278 C26.959,32.643 27.258,32.825 27.702,32.825 C28.129,32.825 28.405,32.630 28.529,32.238 C28.653,31.847 28.715,31.278 28.715,30.532 L28.715,22.238 C28.715,21.562 28.653,21.047 28.529,20.691 C28.405,20.336 28.119,20.157 27.676,20.157 ZM21.797,15.318 C21.797,15.016 21.713,14.775 21.543,14.598 C21.375,14.420 21.139,14.331 20.837,14.331 C20.481,14.331 20.215,14.428 20.038,14.624 C19.860,14.820 19.770,15.087 19.770,15.424 C19.770,16.171 20.198,16.944 21.051,17.744 L21.835,18.498 L21.835,16.891 L21.825,16.891 L21.797,15.318 ZM23.499,0.448 C10.770,0.448 0.448,10.770 0.448,23.501 C0.448,36.233 10.770,46.551 23.499,46.551 C36.233,46.551 46.552,36.233 46.552,23.501 C46.552,10.770 36.233,0.448 23.499,0.448 ZM33.436,29.465 C33.436,30.994 33.346,32.243 33.169,33.212 C32.991,34.181 32.600,34.963 31.996,35.558 C31.391,36.155 30.475,36.452 29.249,36.452 C28.076,36.452 27.186,36.123 26.582,35.465 L26.582,40.132 L21.835,40.132 L21.835,33.407 C21.651,33.419 21.486,33.452 21.290,33.452 C19.210,33.452 17.707,32.936 16.784,31.905 C15.859,30.874 15.397,29.212 15.397,26.918 L15.397,24.678 L19.904,24.678 L19.904,27.532 C19.904,28.670 20.268,29.238 20.997,29.238 C21.397,29.238 21.673,29.120 21.835,28.890 L21.835,25.858 C21.830,25.844 21.829,25.825 21.825,25.811 C21.646,25.322 21.419,24.914 21.144,24.585 C20.868,24.256 20.374,23.744 19.664,23.051 L17.690,21.078 C16.161,19.584 15.397,17.931 15.397,16.117 C15.397,14.162 15.846,12.673 16.744,11.651 C17.641,10.628 18.953,10.117 20.677,10.117 C22.739,10.117 24.224,10.664 25.131,11.757 C26.038,12.851 26.491,14.562 26.491,16.891 L26.481,16.891 L26.510,17.834 C27.186,16.999 28.191,16.504 29.382,16.504 C30.893,16.504 31.947,17.011 32.542,18.024 C33.138,19.037 33.436,20.442 33.436,22.238 L33.436,29.465 Z" />
+                </svg>
+            </a>
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+                aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="2.125rem"
+                        height="1.625rem">
+                        <path fill-rule="evenodd" fill="rgb(255, 229, 0)" d="M34.000,2.000 C34.000,1.375 33.101,-0.000 32.000,-0.000 L2.000,-0.000 C0.899,-0.000 -0.000,1.375 -0.000,2.000 C-0.000,2.625 0.899,4.000 2.000,4.000 L32.000,4.000 C33.101,4.000 34.000,2.625 34.000,2.000 ZM32.000,11.000 L8.000,11.000 C6.900,11.000 5.984,12.439 5.984,13.064 C5.984,13.689 6.900,15.000 8.000,15.000 L32.000,15.000 C33.101,15.000 34.000,13.625 34.000,13.000 C34.000,12.375 33.101,11.000 32.000,11.000 ZM32.000,22.000 L14.000,22.000 C12.899,22.000 12.000,23.374 12.000,24.000 C12.000,24.625 12.899,26.000 14.000,26.000 L32.000,26.000 C33.019,26.028 33.949,24.885 34.000,24.000 C34.051,23.128 33.101,22.000 32.000,22.000 Z" />
+                    </svg>
+                </span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">Link</a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+        <div class="container-fluid text-center justify-content-center" style="height: 45rem; background: #1a1a1a; color: #fff;">
+            <h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 17rem; padding-bottom: 2rem;">DESIGN COMES TO THOSE WHO WAIT</h5>
+            <h6> <small style="letter-spacing: 0.25rem;">Hello This is Onepage Multipurpose Template.</small> </h6>
+            <div style="padding-top: 3.125rem;">
+                <a class="btn btn-primary" href="#" role="button" style="background-color: #ffe500; color: #000; border-radius: 0; border: 0; padding: 1rem 2rem;">LEARN MORE</a>
+            </div>
+        </div>
+    </header>
+
+
+
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k" crossorigin="anonymous"></script>
-  </body>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
