--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <body>
     <header>
-        <div class="container-fluid" style="background: #1a1a1a !important;">
+        <div class="container-fluid text-center" style="background: #1a1a1a !important;">
             <!-- --------------------------- -->
             <nav class="navbar navbar-dark bg-dark" style="background: #1a1a1a !important;">
                 <a class="navbar-brand" href="#">
