--- a/index.html
+++ b/index.html
@@ -91,11 +91,23 @@
                         d="M132.345,56.540 L124.909,55.548 L121.953,47.324 L117.842,46.817 L105.971,28.895 L84.262,51.111 L75.069,31.205 L69.942,32.821 L49.388,0.765 L38.995,29.865 L21.767,48.641 L0.612,82.382 L158.165,82.382 L132.345,56.540 ZM54.932,57.579 L54.932,44.185 L39.366,62.845 L36.270,54.301 L25.970,78.202 L9.064,78.272 L26.848,50.789 L43.060,34.323 L50.541,12.590 L50.541,38.502 L60.428,33.005 L54.932,57.579 ZM103.708,60.653 L101.212,57.348 L84.262,80.398 L91.700,61.806 L72.437,77.951 L86.894,53.423 L106.480,34.808 L101.028,47.648 L107.496,45.524 L103.708,60.653 Z"/>
                     </svg>
                 </div>
-                <p style="font-family: 'Raleway', sans-serif; padding-top: 5.75rem;">Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus.</p>
+                <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 5.75rem;">Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus.</p>
             </div>
         </div>
     </div>
     <!-- ---------------------------- -->
+    <div class="container-fluid" style="background:#f4f4f4; color: #000;">
+        <div class="container text-center">
+            <div class="row justify-content-center">
+                <div class="col-sm-8">
+                    <p style="padding-top: 5.25rem;"> <img src="img/CompositePath.png" alt="Composite Path"> </p>
+                    <p><h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 2.25rem;">OUR SERVICES</h5></p>
+                    <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 2.25rem; padding-bottom: 5.5rem;">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada</p>
+                </div>
+            </div>
+        </div>
+    </div>
+<!-- ---------------------------- -->
 
 
 
