--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
             <div class="container text-center px-0" style="background:#1a1a1a; color: #fff;">
                 <div class="row" style="height: 45rem;">
                     <div class="col-sm">
-                        <h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 17.5rem; padding-bottom: 2rem;">DESIGN COMES TO THOSE WHO WAIT</h5>
+                        <h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 17.5rem; padding-bottom: 2rem;">DESIGN
+                            COMES TO THOSE WHO WAIT</h5>
                         <h6> <small style="letter-spacing: 0.25rem;">Hello This is Onepage Multipurpose Template.</small></h6>
                         <div style="padding-top: 3.125rem; font-family: 'PT Sans', sans-serif;">
                             <a class="btn btn-primary" href="#" role="button" style="background-color: #ffe500; color: #000; border-radius: 0; border: 0; padding: 1rem 2rem;">
@@ -83,15 +84,15 @@
         <div class="row justify-content-center" style="height: 40rem;">
             <div class="col-sm-6 px-0">
                 <div style="padding-top: 10.5rem;">
-                    <svg 
-                        xmlns="http://www.w3.org/2000/svg"
-                        xmlns:xlink="http://www.w3.org/1999/xlink"
-                        width="10rem" height="5.25rem">
-                       <path fill-rule="evenodd"  fill="rgb(255, 229, 0)"
-                        d="M132.345,56.540 L124.909,55.548 L121.953,47.324 L117.842,46.817 L105.971,28.895 L84.262,51.111 L75.069,31.205 L69.942,32.821 L49.388,0.765 L38.995,29.865 L21.767,48.641 L0.612,82.382 L158.165,82.382 L132.345,56.540 ZM54.932,57.579 L54.932,44.185 L39.366,62.845 L36.270,54.301 L25.970,78.202 L9.064,78.272 L26.848,50.789 L43.060,34.323 L50.541,12.590 L50.541,38.502 L60.428,33.005 L54.932,57.579 ZM103.708,60.653 L101.212,57.348 L84.262,80.398 L91.700,61.806 L72.437,77.951 L86.894,53.423 L106.480,34.808 L101.028,47.648 L107.496,45.524 L103.708,60.653 Z"/>
+                    <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="10rem"
+                        height="5.25rem">
+                        <path fill-rule="evenodd" fill="rgb(255, 229, 0)" d="M132.345,56.540 L124.909,55.548 L121.953,47.324 L117.842,46.817 L105.971,28.895 L84.262,51.111 L75.069,31.205 L69.942,32.821 L49.388,0.765 L38.995,29.865 L21.767,48.641 L0.612,82.382 L158.165,82.382 L132.345,56.540 ZM54.932,57.579 L54.932,44.185 L39.366,62.845 L36.270,54.301 L25.970,78.202 L9.064,78.272 L26.848,50.789 L43.060,34.323 L50.541,12.590 L50.541,38.502 L60.428,33.005 L54.932,57.579 ZM103.708,60.653 L101.212,57.348 L84.262,80.398 L91.700,61.806 L72.437,77.951 L86.894,53.423 L106.480,34.808 L101.028,47.648 L107.496,45.524 L103.708,60.653 Z" />
                     </svg>
                 </div>
-                <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 5.75rem;">Donec rutrum congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla sit amet nisl tempus.</p>
+                <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 5.75rem;">Donec rutrum
+                    congue leo eget malesuada. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus. Proin
+                    eget tortor risus. Mauris blandit aliquet elit, eget tincidunt nibh pulvinar a. Curabitur non nulla
+                    sit amet nisl tempus.</p>
             </div>
         </div>
     </div>
@@ -101,24 +102,58 @@
             <div class="row justify-content-center">
                 <div class="col-sm-8">
                     <p style="padding-top: 5.25rem;"> <img src="img/CompositePath.png" alt="Composite Path"> </p>
-                    <p><h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 2.25rem;">OUR SERVICES</h5></p>
-                    <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 2.25rem; padding-bottom: 5.5rem;">Vestibulum ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Donec sollicitudin molestie malesuada</p>
+                    <p>
+                        <h5 style="font-family: 'Raleway', sans-serif; letter-spacing: 1rem; padding-top: 2.25rem;">OUR
+                            SERVICES</h5>
+                    </p>
+                    <p style="font-family: 'Raleway', sans-serif; font-size: 0.9775rem; padding-top: 2.25rem; padding-bottom: 5.5rem;">Vestibulum
+                        ac diam sit amet quam vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                        lacinia in, elementum id enim. Donec sollicitudin molestie malesuada</p>
                 </div>
             </div>
+            <div class="card-deck">
+                <div class="card " style="width: 17rem; box-shadow: 0 0 0.25rem;">
+                    <img class="card-img-top mx-auto" src="img/graficdesign.png" alt="Grafic Design" style="width:20%;">
+                    <div class="card-body">
+                        <h4 class="card-title">John CSS</h4>
+                        <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
+                    <img class="card-img-top mx-auto" src="img/webdesign.png" alt="Web Design" style="width:20%;">
+                    <div class="card-body">
+                        <h4 class="card-title">John CSS</h4>
+                        <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
+                        <img class="card-img-top mx-auto" src="img/webdevelpvent.png" alt="Web Development" style="width:20%;">
+                        <div class="card-body">
+                            <h4 class="card-title">John CSS</h4>
+                            <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                            </div>
+                    </div>
+                    <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
+                            <img class="card-img-top mx-auto" src="img/appdevelopment.png" alt="App Development" style="width:12%;">
+                            <div class="card-body">
+                                <h4 class="card-title">John CSS</h4>
+                                <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                                    </div>
+                        </div>
+            </div>
         </div>
-    </div>
-<!-- ---------------------------- -->
+        <!-- ---------------------------- -->
 
 
 
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-        crossorigin="anonymous"></script>
+        <!-- Optional JavaScript -->
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+            crossorigin="anonymous"></script>
 </body>
 
 </html>
