--- a/index.html
+++ b/index.html
@@ -113,47 +113,111 @@
             </div>
             <div class="card-deck">
                 <div class="card " style="width: 17rem; box-shadow: 0 0 0.25rem;">
-                    <img class="card-img-top mx-auto" src="img/graficdesign.png" alt="Grafic Design" style="width:20%;">
+                    <img class="card-img-top mx-auto" src="img/graficdesign.png" alt="Grafic Design" style="width: 20%; padding-top: 2.5rem;">
                     <div class="card-body">
-                        <h4 class="card-title">John CSS</h4>
-                        <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                        <h6 style="font-family: 'Raleway', sans-serif: 700; letter-spacing: .5rem; padding-top: 1rem;">GRAFIC
+                            DESIGN</h6>
+                        <p class="card-text pt-4" style="font-size: 0.85rem;">Vestibulum ac diam sit amet quam vehicula
+                            elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                            lacinia in, elementum id enim. Donec sollicitudin</p>
                     </div>
                 </div>
                 <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
-                    <img class="card-img-top mx-auto" src="img/webdesign.png" alt="Web Design" style="width:20%;">
+                    <img class="card-img-top mx-auto" src="img/webdesign.png" alt="Web Design" style="width:15%; padding-top: 2.5rem;">
                     <div class="card-body">
-                        <h4 class="card-title">John CSS</h4>
-                        <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                        <h6 style="font-family: 'Raleway', sans-serif: 700; letter-spacing: .5rem; padding-top: 1rem;">WEB<br>
+                            DESIGN</h6>
+                        <p class="card-text pt-4" style="font-size: 0.85rem;">Vestibulum ac diam sit amet quam vehicula
+                            elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                            lacinia in, elementum id enim. Donec sollicitudin</p>
                     </div>
                 </div>
                 <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
-                        <img class="card-img-top mx-auto" src="img/webdevelpvent.png" alt="Web Development" style="width:20%;">
-                        <div class="card-body">
-                            <h4 class="card-title">John CSS</h4>
-                            <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
+                    <img class="card-img-top mx-auto" src="img/webdevelpvent.png" alt="Web Development" style="width:20%; padding-top: 2.5rem;">
+                    <div class="card-body">
+                        <h6 style="font-family: 'Raleway', sans-serif: 700; letter-spacing: .5rem; padding-top: 1rem;">WEB
+                            DEVELOPMENT</h6>
+                        <p class="card-text pt-4" style="font-size: 0.85rem;">Vestibulum ac diam sit amet quam vehicula
+                            elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                            lacinia in, elementum id enim. Donec sollicitudin</p>
+                    </div>
+                </div>
+                <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
+                    <img class="card-img-top mx-auto" src="img/appdevelopment.png" alt="App Development" style="width:10%; padding-top: 2.5rem;">
+                    <div class="card-body">
+                        <h6 style="font-family: 'Raleway', sans-serif: 700; letter-spacing: .5rem; padding-top: 1rem;">APP
+                            DEWELOPMENT</h6>
+                        <p class="card-text pt-4 pb-3" style="font-size: 0.85rem;">Vestibulum ac diam sit amet quam
+                            vehicula elementum sed sit amet dui. Quisque velit nisi, pretium ut
+                            lacinia in, elementum id enim. Donec sollicitudin</p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="card-deck pt-4">
+                <div class="card" style="width: 17rem;">
+                    <div class="card-body text-left">
+                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ps</strong> </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+
+                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ai</strong> </p>
+                        <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Id</strong> </p>
+                        <img class="mx-auto" src="img/skills1.png" alt="skills">
+                    </div>
+                </div>
+                <div class="card" style="width: 17rem;">
+                        <div class="card-body text-left">
+                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                            <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                            <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                            <img class="mx-auto" src="img/skills1.png" alt="skills">
+                        </div>
+                    </div>
+                    <div class="card" style="width: 17rem;">
+                            <div class="card-body text-left">
+                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                <img class="mx-auto" src="img/skills1.png" alt="skills">
                             </div>
-                    </div>
-                    <div class="card" style="width: 17rem; box-shadow: 0 0 0.25rem;">
-                            <img class="card-img-top mx-auto" src="img/appdevelopment.png" alt="App Development" style="width:12%;">
-                            <div class="card-body">
-                                <h4 class="card-title">John CSS</h4>
-                                <p class="card-text">Some example text some example text. John CSS is an architect and engineer</p>
-                                    </div>
+                        </div>
+                        <div class="card" style="width: 17rem;">
+                                <div class="card-body text-left">
+                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
+
+                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
+                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
+                                </div>
                         </div>
             </div>
         </div>
-        <!-- ---------------------------- -->
+    </div>
+    <!-- ---------------------------- -->
 
 
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-            crossorigin="anonymous"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
-            crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
-            crossorigin="anonymous"></script>
+    <!-- Optional JavaScript -->
+    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+        crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
