--- a/index.html
+++ b/index.html
@@ -157,52 +157,56 @@
             <div class="card-deck pt-4">
                 <div class="card" style="width: 17rem;">
                     <div class="card-body text-left">
-                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ps</strong> </p>
+                        <p class="mb-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ps</strong>
+                        </p>
                         <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
-
-                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ai</strong> </p>
-                        <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                        <p style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Id</strong> </p>
-                        <img class="mx-auto" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ai</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Id</strong>
+                        </p>
+                        <img class="mx-auto mb-0" style="width: 100%;" src="img/skills1.png" alt="skills">
                     </div>
                 </div>
                 <div class="card" style="width: 17rem;">
-                        <div class="card-body text-left">
-                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                            <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                            <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                            <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                            <img class="mx-auto" src="img/skills1.png" alt="skills">
-                        </div>
+                    <div class="card-body text-left">
+                        <p class="mb-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ui</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Ux</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Responsive</strong>
+                        </p>
+                        <img class="mx-auto mb-0" style="width: 100%;" src="img/skills1.png" alt="skills">
                     </div>
-                    <div class="card" style="width: 17rem;">
-                            <div class="card-body text-left">
-                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                                <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                <img class="mx-auto" src="img/skills1.png" alt="skills">
-                            </div>
-                        </div>
-                        <div class="card" style="width: 17rem;">
-                                <div class="card-body text-left">
-                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
-
-                                    <h5 style="font-family: 'Raleway', sans-serif: 900;"> <small>Ps</small> </h5>
-                                    <img class="mx-auto" src="img/skills1.png" alt="skills">
-                                </div>
-                        </div>
+                </div>
+                <div class="card" style="width: 17rem;">
+                    <div class="card-body text-left">
+                        <p class="mb-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Html</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Css</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Js</strong>
+                        </p>
+                        <img class="mx-auto mb-0" style="width: 100%;" src="img/skills1.png" alt="skills">
+                    </div>
+                </div>
+                <div class="card" style="width: 17rem;">
+                    <div class="card-body text-left">
+                        <p class="mb-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>C++</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Java</strong>
+                        </p>
+                        <img class="mx-auto" style="width: 100%;" src="img/skills1.png" alt="skills">
+                        <p class="my-0" style="font-family: 'Raleway', sans-serif; font-size: 0.75rem;"> <strong>Swift</strong>
+                        </p>
+                        <img class="mx-auto mb-0" style="width: 100%;" src="img/skills1.png" alt="skills">
+                    </div>
+                </div>
             </div>
         </div>
     </div>
